# pico-qwen

./: .gitignore  250719_FIXES_COMPLETED.md  250719_FIXES_PLAN.md  250719_FIX_PROPOSAL.md  CLAUDE.md  COMPLETE_INCOMPLETE_FUNCTIONS_REPORT.md  Cargo.toml  Dockerfile  GEMINI.md  PLAN_C_INFERENCE.md  README.md  README_CREDITS.md  README_C_INFERENCE.md  README_DEVELOPMENT.md  README_INSTALLATION.md  README_OVERVIEW.md  README_USAGE.md  TASKS_C_INFERENCE.md  UNIFIED_FORMAT_SUMMARY.md  config.toml  diagnostic_format.rs  docker-compose.yml  model_config.toml  run_all_tests.sh  status.html  test_format_compatibility.rs  test_unified_format.sh
benchmark_baselines/: baseline_20250718_174217.csv
config/: docker.toml  web.toml
docs/: plan_1.md
qwen3-api/: Cargo.toml  config.toml
qwen3-api/src/: config.rs  lib.rs  main.rs  server.rs  state.rs
qwen3-api/src/handlers/: chat.rs  generate.rs  health.rs  mod.rs  models.rs  openai.rs  status.rs
qwen3-api/src/middleware/: logging.rs  mod.rs  rate_limit.rs
qwen3-api/tests/: integration_test.rs
qwen3-c-lib/: CMakeLists.txt  Makefile  debug_memory  test_attention  test_inference  test_matrix  test_model_loading  test_transformer
qwen3-c-lib/include/: attention.h  cpu_features.h  inference_config.h  matrix.h  model.h  model_internal.h  qwen3_inference.h  sampler.h  tensor.h  tokenizer.h  transformer.h
qwen3-c-lib/src/: attention.c  memory.h  model.c  qwen3_inference.c  qwen3_inference_internal.c  tokenizer.c  transformer.c  utils.c
qwen3-c-lib/tests/: test_transformer.c
qwen3-cli/: Cargo.toml
qwen3-cli/src/: main.rs
qwen3-export/src/: config_loader.rs  model_exporter.rs  tensor_reader.rs
qwen3-export/tests/: config_loader_test.rs  model_exporter_test.rs
qwen3-export/tests/unit/: model_exporter_test.rs
qwen3-inference/: Cargo.toml
qwen3-inference-c/: Cargo.toml  build.rs
qwen3-inference-c/src/: lib.rs
qwen3-inference/src/: configuration.rs  cpu_optimizations.rs  extended_config.rs  extended_transformer.rs  generation.rs  lib.rs  quantization.rs  tokenizer.rs  utils.rs
qwen3-inference/src/cloud/: anthropic.rs  local.rs  mod.rs  openai.rs
qwen3-inference/src/cpu/: mod.rs
qwen3-inference/tests/: cpu_optimization_tests.rs  extended_config_tests.rs  integration_tests.rs
qwen3-web/: Cargo.toml
qwen3-web/src/: config.rs  lib.rs  main.rs  routes.rs  websocket.rs
qwen3-web/static/: app.js  index.html  manifest.json  styles.css  sw.js
qwen3-web/tests/: integration_test.rs
scripts/: benchmark.sh  install-systemd-service.sh  make_clean.sh  performance_test.sh  test_phase2_arch.sh  test_phase3_arch.sh  test_phases_5_7.sh
