[workspace]
resolver = "2"
members = [
    "qwen3-cli",
    "qwen3-export",
    "qwen3-inference",
    "qwen3-api",
    "qwen3-web",
    "qwen3-inference-c"
]

[workspace.package]
version = "0.1.0"
authors = ["Ilya Builuk <ilya.builuk@gmail.com>"]
repository = "https://github.com/reinterpretcat/qwen3-rs"
license = "Apache-2.0"
keywords = ["LLM", "qwen3"]
categories = ["LLM"]
edition = "2024"

[workspace.dependencies]
anyhow = "1.0"
byteorder = "1.5"
clap = { version = "4.0", features = ["derive"] }
rayon = "1.8"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
safetensors = "0.4"
memmap2 = "0.9"
log = "0.4"
env_logger = "0.10"

# Phase 5: Cloud/Edge dependencies
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Phase 6: CPU optimization
cpufeatures = "0.2"
raw-cpuid = "11.0"

# Phase 7: Service management
windows-service = "0.6"
signal-hook = "0.3"

qwen3-export = { path = "qwen3-export" }
qwen3-inference = { path = "qwen3-inference" }
qwen3-inference-c = { path = "qwen3-inference-c" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
