[package]
name = "qwen3-inference-c"
version = "0.1.0"
edition = "2024"
authors = ["Ilya Builuk <ilya.builuk@gmail.com>"]
repository = "https://github.com/reinterpretcat/qwen3-rs"
license = "Apache-2.0"
description = "Rust FFI bindings for Qwen3 C inference engine"

[dependencies]
anyhow = "1.0"
libc = "0.2"
thiserror = "1.0"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
tempfile = "3.8"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
test_models = []