[package]
name = "qwen3-inference"
description = "Qwen3 inference code."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
byteorder = { workspace = true }
rayon = { workspace = true }
memmap2 = { workspace = true }
log = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
num_cpus = "1.16"
tempfile = "3.8"