[package]
name = "qwen3-inference"
description = "Qwen3 inference code."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
byteorder = { workspace = true }
rayon = { workspace = true }
memmap2 = { workspace = true }
log = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
num_cpus = "1.16"
tempfile = "3.8"

# Phase 5: Cloud/Edge
tokio = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
humantime-serde = "1.1"

# Phase 6: CPU optimization
cpufeatures = { workspace = true }
raw-cpuid = { workspace = true }

# Phase 7: Service management
signal-hook = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-service = { workspace = true }