[package]
name = "qwen3-web"
version = "0.1.0"
edition = "2021"
authors = ["Pico-Qwen Contributors"]
description = "Minimalist chat web interface for Pico-Qwen"
license = "MIT"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }
tokio-tungstenite = "0.24"
futures = "0.3"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio-test = "0.4"